@@ -45,6 +45,18 @@ name|servlet
 operator|.
 name|http
 operator|.
+name|HttpServlet
+import|;
+end_import
+
+begin_import
+import|import
+name|javax
+operator|.
+name|servlet
+operator|.
+name|http
+operator|.
 name|HttpServletRequest
 import|;
 end_import
@@ -58,6 +70,34 @@ operator|.
 name|http
 operator|.
 name|HttpServletResponse
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|commons
+operator|.
+name|logging
+operator|.
+name|Log
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|commons
+operator|.
+name|logging
+operator|.
+name|LogFactory
 import|;
 end_import
 
@@ -109,11 +149,51 @@ begin_import
 import|import
 name|org
 operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|mapred
+operator|.
+name|StatusHttpServer
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|mortbay
+operator|.
+name|http
+operator|.
+name|NCSARequestLog
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
 name|mortbay
 operator|.
 name|http
 operator|.
 name|SocketListener
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|mortbay
+operator|.
+name|jetty
+operator|.
+name|servlet
+operator|.
+name|WebApplicationContext
 import|;
 end_import
 
@@ -140,6 +220,24 @@ name|servlet
 operator|.
 name|Servlet
 block|{
+specifier|private
+specifier|static
+specifier|final
+name|Log
+name|LOG
+init|=
+name|LogFactory
+operator|.
+name|getLog
+argument_list|(
+name|Dispatcher
+operator|.
+name|class
+operator|.
+name|getName
+argument_list|()
+argument_list|)
+decl_stmt|;
 specifier|private
 name|MetaHandler
 name|metaHandler
@@ -779,6 +877,15 @@ name|out
 operator|.
 name|println
 argument_list|(
+literal|" max-num-threads  The maximum number of threads for Jetty to run. Defaults to 256."
+argument_list|)
+expr_stmt|;
+name|System
+operator|.
+name|out
+operator|.
+name|println
+argument_list|(
 literal|" help  Print this message and exit."
 argument_list|)
 expr_stmt|;
@@ -827,6 +934,11 @@ name|bindAddress
 init|=
 literal|"0.0.0.0"
 decl_stmt|;
+name|int
+name|numThreads
+init|=
+literal|256
+decl_stmt|;
 comment|// Process command-line args. TODO: Better cmd-line processing
 comment|// (but hopefully something not as painful as cli options).
 specifier|final
@@ -840,6 +952,12 @@ name|String
 name|portArgKey
 init|=
 literal|"--port="
+decl_stmt|;
+specifier|final
+name|String
+name|numThreadsKey
+init|=
+literal|"--max-num-threads="
 decl_stmt|;
 for|for
 control|(
@@ -959,6 +1077,36 @@ literal|"the REST server pid"
 argument_list|)
 expr_stmt|;
 block|}
+elseif|else
+if|if
+condition|(
+name|cmd
+operator|.
+name|startsWith
+argument_list|(
+name|numThreadsKey
+argument_list|)
+condition|)
+block|{
+name|numThreads
+operator|=
+name|Integer
+operator|.
+name|parseInt
+argument_list|(
+name|cmd
+operator|.
+name|substring
+argument_list|(
+name|numThreadsKey
+operator|.
+name|length
+argument_list|()
+argument_list|)
+argument_list|)
+expr_stmt|;
+continue|continue;
+block|}
 comment|// Print out usage if we get to here.
 name|printUsageAndExit
 argument_list|()
@@ -1004,6 +1152,13 @@ argument_list|(
 name|bindAddress
 argument_list|)
 expr_stmt|;
+name|listener
+operator|.
+name|setMaxThreads
+argument_list|(
+name|numThreads
+argument_list|)
+expr_stmt|;
 name|webServer
 operator|.
 name|addListener
@@ -1011,6 +1166,30 @@ argument_list|(
 name|listener
 argument_list|)
 expr_stmt|;
+name|NCSARequestLog
+name|ncsa
+init|=
+operator|new
+name|NCSARequestLog
+argument_list|()
+decl_stmt|;
+name|ncsa
+operator|.
+name|setLogLatency
+argument_list|(
+literal|true
+argument_list|)
+expr_stmt|;
+name|webServer
+operator|.
+name|setRequestLog
+argument_list|(
+name|ncsa
+argument_list|)
+expr_stmt|;
+name|WebApplicationContext
+name|context
+init|=
 name|webServer
 operator|.
 name|addWebApplication
@@ -1023,6 +1202,50 @@ name|getWebAppDir
 argument_list|(
 literal|"rest"
 argument_list|)
+argument_list|)
+decl_stmt|;
+name|context
+operator|.
+name|addServlet
+argument_list|(
+literal|"stacks"
+argument_list|,
+literal|"/stacks"
+argument_list|,
+name|StatusHttpServer
+operator|.
+name|StackServlet
+operator|.
+name|class
+operator|.
+name|getName
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|context
+operator|.
+name|addServlet
+argument_list|(
+literal|"logLevel"
+argument_list|,
+literal|"/logLevel"
+argument_list|,
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|log
+operator|.
+name|LogLevel
+operator|.
+name|Servlet
+operator|.
+name|class
+operator|.
+name|getName
+argument_list|()
 argument_list|)
 expr_stmt|;
 name|webServer
